# MLOps-Vehicle-Insurance-Claim-Prediction

./: .dockerignore  Dockerfile  README.md  app.py  main.py  push_data.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py
.github/workflows/: ci-cd.yaml
analysis/: EDA.ipynb  bivariate_analysis.py  data_inspection.py  missing_value_analysis.py  univariate_analysis.py
schema/: schema.yaml
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: aws_connection.py  mongodb_connection.py
src/constants/: __init__.py
src/constants/constant/: __init__.py
src/data_access/: fetch_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: exception.py
src/logging/: logger.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
src/utils/ml_utils/metric/: classification_metric.py
src/utils/ml_utils/model/: estimator.py
static/: style.css
templates/: vehicledata.html
tests/: unit_test.py
vehicle_data/: insurance_data.csv
